--- a/index.html
+++ b/index.html
@@ -10,11 +10,55 @@
     <header>
         <div>
             <h1>Il mio viaggio a Londra</h1>
-            <img src="img/pexels-bill-emrich-230794-0" alt="">
-            <img src="img/pexels-bill-emrich-230794-1" alt="">
-            <img src="img/pexels-bill-emrich-230794-2" alt="">
+            <img src="img2/pexels-bill-emrich-230794-0.jpg" alt="">
+            <img src="img2/pexels-bill-emrich-230794-1.jpg" alt="">
+            <img src="img2/pexels-bill-emrich-230794-2.jpg" alt="">
             <hr>
         </div>
     </header>
+
+    <main>
+      <div>
+        <h3>Le mie spese</h3>
+        <table>
+            <tr>
+              <th>Nome</th>
+              <th>Descrizione</th>
+              <th>Costo</th>
+            </tr>
+            <tbody>
+              <tr>
+                <td>1</td>
+                <td>Biglietto Aereo</td>
+                <td>120€</td>
+              </tr>
+              <tr>
+                <td>1</td>
+                <td>Biglietto Aereo</td>
+                <td>120€</td>
+              </tr>
+              <tr>
+                <td>1</td>
+                <td>Biglietto Aereo</td>
+                <td>120€</td>
+              </tr>
+              <tr>
+                <td colspan="2">Totale</td>
+                <td>360€</td>
+              </tr>
+            </tbody>
+        </table>
+        <hr>
+      </div>
+      <div>
+        <h3>Cose da fare</h3>
+        <ul>
+          <li>Visitare la tower of London</li>
+          <li>Visitare greenwich</li>
+          <li>Visitare la tower of London</li>
+          <li>Visitare la tower of London</li>
+        </ul>
+      </div>
+    </main>
 </body>
 </html>
