--- a/index.html
+++ b/index.html
@@ -53,11 +53,21 @@
       <div>
         <h3>Cose da fare</h3>
         <ul>
-          <li>Visitare la tower of London</li>
-          <li>Visitare greenwich</li>
-          <li>Visitare la tower of London</li>
-          <li>Visitare la tower of London</li>
+          <li>Visitare la tower of London &times;</li>
+          <li>Visitare greenwich &#10003;</li>
+          <li>Ascoltare un artista &#10003;</li>
+          <li>Mangiare il tipico Fish and Chip &times;</li>
         </ul>
+        <hr>
+      </div>
+      <div>
+        <h3>Info utili:</h3>
+        <ol>
+            <li>Numeri utili di emergenza</li>
+                <ul>
+                    <li></li>
+                </ul>
+        </ol>
       </div>
     </main>
 </body>
