--- a/index.html
+++ b/index.html
@@ -65,9 +65,26 @@
         <ol>
             <li>Numeri utili di emergenza</li>
                 <ul>
-                    <li></li>
+                    <li>999 - Emergenza</li>
+                    <li>101 - Numero polizia</li>
+                    <li>111 - Numero assistenza medica </li>
+                </ul>
+            <li>Hotel</li>    
+                <ul>
+                    <li><b>Nome  hotel:</b>Buckingham Palce</li>
+                    <li><b>Indirizzo hotel:</b>Westminister, London SW1A1AA, Regno Unito</li>
+                </ul>
+                <ul>
+                    <li><b>Volo di Andata:</b>Y1234X, 9.30 Milano Malpensa</li>
+                    <li><b>Volo di Ritorno:</b>Y1236X, 9.30 London Hethrow</li>
                 </ul>
         </ol>
+        <hr>
+      </div>
+      <div>
+        <h3>Le Foto</h3>
+        <img src="" alt="">
+        <img src="" alt="">
       </div>
     </main>
 </body>
