--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
                     <li><b>Nome  hotel:</b>Buckingham Palce</li>
                     <li><b>Indirizzo hotel:</b>Westminister, London SW1A1AA, Regno Unito</li>
                 </ul>
+            <li>Aereo</li>    
                 <ul>
                     <li><b>Volo di Andata:</b>Y1234X, 9.30 Milano Malpensa</li>
                     <li><b>Volo di Ritorno:</b>Y1236X, 9.30 London Hethrow</li>
