--- a/index.html
+++ b/index.html
@@ -65,13 +65,13 @@
         <ol>
             <li>Numeri utili di emergenza</li>
                 <ul>
-                    <li>999 - Emergenza</li>
-                    <li>101 - Numero polizia</li>
-                    <li>111 - Numero assistenza medica </li>
+                    <li><b>999</b> - Emergenza</li>
+                    <li><b>101</b> - Numero polizia</li>
+                    <li><b>111</b> - Numero assistenza medica </li>
                 </ul>
             <li>Hotel</li>    
                 <ul>
-                    <li><b>Nome  hotel:</b>Buckingham Palce</li>
+                    <li><b>Nome hotel:</b>Buckingham Palce</li>
                     <li><b>Indirizzo hotel:</b>Westminister, London SW1A1AA, Regno Unito</li>
                 </ul>
             <li>Aereo</li>    
